<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="#ffffff"
>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="#ffffff"
  android:padding="6dp"
  android:paddingTop="10dp"
  
  >
	<TextView  
	  android:layout_width="fill_parent" 
	  android:layout_height="wrap_content" 
	  android:text="@string/aboutapptitle"
	  android:textColor="#000000"
	  android:textSize="24dp"
	  android:paddingBottom="12dp"
	  android:textStyle="bold"
	  />
	<TextView  
		  android:layout_width="wrap_content" 
		  android:layout_height="wrap_content" 
		  android:text="@string/aboutapp"
		  android:textColor="#000000"
		  android:paddingBottom="12dp"
		  android:visibility="gone"
		  />
	<TextView  
	  android:layout_width="fill_parent" 
	  android:layout_height="wrap_content" 
	  android:text="@string/aboutdevelopedby"
	  android:textStyle="bold"
	  android:textColor="#000000"
	  android:textSize="18dp"
	  android:paddingBottom="4dp"
	  />
	  
	  <TextView 
	  android:text="@string/developers"
	  android:layout_height="fill_parent"
	  android:layout_width="fill_parent"
	  android:id="@+id/developers"
	  android:textColor="#000000"
	  />
	  
	  
</LinearLayout>
</ScrollView>