<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:paddingBottom="5dp"
  android:background="#ffffff"
  >
		<View
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:background="#7CCDFF" 
		/>

  
 <LinearLayout
    	android:layout_width="fill_parent"
	  	android:layout_height="fill_parent"
	  	android:layout_weight="1"
  		android:orientation="vertical"
 
 >
<ScrollView
	  	android:id="@+id/nofavorites"
    	android:layout_width="fill_parent"
	  	android:layout_height="fill_parent"
>
  <LinearLayout
    	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:orientation="vertical"
  >
  <TextView
	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:text="@string/favoritesnone"
	  	android:textColor="#000000"
	  	android:paddingRight="6dp"
	  	android:paddingLeft="6dp"
	  	android:paddingTop="10dp"
	  	android:textSize="22dp"
	/> 
  <TextView
	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:text="@string/favoriteshelptext1"
	  	android:textColor="#000000"
	  	android:paddingRight="6dp"
	  	android:paddingLeft="6dp"
	  	android:paddingTop="10dp"
	  	android:paddingBottom="10dp"
	/> 
  <ImageView
	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:src="@drawable/favoritehelp1"
	  	android:layout_gravity="center_horizontal"
	  	
  />

  <TextView
	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:text="@string/favoriteshelptext2"
	  	android:textColor="#000000"
	  	android:paddingRight="6dp"
	  	android:paddingLeft="6dp"
	  	android:paddingTop="10dp"
	  	android:paddingBottom="10dp"

	/> 

  <ImageView
		android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
    	android:src="@drawable/favoritehelp2"
	    android:layout_gravity="center_horizontal"
	 />
 
  	</LinearLayout>  
	</ScrollView>
	  <ListView
	  	android:layout_width="fill_parent"
	  	android:layout_height="fill_parent"
	    android:id="@+id/favoritelist"
	    android:background="#ffffff"
	    android:cacheColorHint="#ffffff"
	    android:visibility="gone"
	
	/>
</LinearLayout>
  	<TextView
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:text="@string/favoritesnoteextended"
	  android:paddingTop="6dp"
	  android:textColor="#000000"
	  android:textSize="11dp"
	  android:paddingLeft="10dp"
	  />
</LinearLayout>
